--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aoc2024"
-version = "0.12.2"
+version = "0.13.2"
 description = "Advent of Code 2024 in Python"
 readme = "README.md"
 authors = [
@@ -10,6 +10,7 @@ requires-python = ">=3.11"
 dependencies = [
     "pytest>=8.3.4",
     "shapely>=2.0.6",
+    "sympy>=1.13.3",
 ]
 
 [project.scripts]
