--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aoc2024"
-version = "0.14.1"
+version = "0.14.2"
 description = "Advent of Code 2024 in Python"
 readme = "README.md"
 authors = [
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
+    "numpy>=2.2.1",
     "pytest>=8.3.4",
     "shapely>=2.0.6",
     "sympy>=1.13.3",
